# n-body-simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  jobscript.slurm  run.sh  testtest
cluster/output/: average.mscluster22.194639.out
data/: test  test_1000  test_10000
src/: body.cpp  body.h  cuda.cu  data_generator.cpp  main.cpp  mpi.cpp  node.cpp  node.h  serial.cpp  utilities.cpp  utilities.h  validator.cpp  vec3.cpp  vec3.h
src/OpenGL/: camera.cpp  camera.h  geometry.cpp  geometry.h  gl_utilities.cpp  gl_utilities.h  index_buffer.h  renderer.h  shader.h  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
src/OpenGL/shaders/: FragmentShader.frag  VertexShader.vert
src/openGL/: gl_helper.cpp  gl_helper.h  index_buffer.cpp  renderer.cpp  renderer.h  shader.cpp  vertex_array.h
src/openGL/shaders/: FragmentShader.frag
src/shaders/: VertexShader.vert
src/utils/: body.cpp  body.h  node.cpp  node.h  utilities.cpp  utilities.h  vec3.cpp  vec3.h
